Commit #7 CORS package

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cookie-parser": "*",
     "body-parser": "*",
     "cron": "*",
-    "xoauth2": "*"
+    "xoauth2": "*",
+    "cors": "*"
   }
 }
 
